--- a/.github/workflows/javaspringship-test.yml
+++ b/.github/workflows/javaspringship-test.yml
@@ -10,10 +10,8 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
-
+  unit-tests:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
