--- a/javaSpringShip/pom.xml
+++ b/javaSpringShip/pom.xml
@@ -19,6 +19,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>pl.battleships</groupId>
+			<artifactId>core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
@@ -100,6 +105,12 @@
 			<version>2.9.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -130,7 +141,7 @@
 							<generatorName>spring</generatorName>
 							<output>${project.build.directory}/generated-sources</output>
 							<apiPackage>pl.battleships.api</apiPackage>
-							<modelPackage>pl.battleships.api.model</modelPackage>
+							<modelPackage>pl.battleships.api.dto</modelPackage>
 							<generateApis>true</generateApis>
 							<configOptions>
 								<interfaceOnly>true</interfaceOnly>
