--- a/javaSpringShip/pom.xml
+++ b/javaSpringShip/pom.xml
@@ -19,6 +19,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>pl.battleships</groupId>
+			<artifactId>core</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
@@ -88,16 +93,15 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.spockframework</groupId>
-			<artifactId>spock-core</artifactId>
-			<version>2.0-M2-groovy-3.0</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.9.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.0</version>
 		</dependency>
 
 	</dependencies>
@@ -130,7 +134,7 @@
 							<generatorName>spring</generatorName>
 							<output>${project.build.directory}/generated-sources</output>
 							<apiPackage>pl.battleships.api</apiPackage>
-							<modelPackage>pl.battleships.api.model</modelPackage>
+							<modelPackage>pl.battleships.api.dto</modelPackage>
 							<generateApis>true</generateApis>
 							<configOptions>
 								<interfaceOnly>true</interfaceOnly>
@@ -140,18 +144,6 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-				<groupId>org.codehaus.gmavenplus</groupId>
-				<artifactId>gmavenplus-plugin</artifactId>
-				<version>1.9.0</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>compileTests</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
