--- a/core/pom.xml
+++ b/core/pom.xml
@@ -153,5 +153,13 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
+         
+    <distributionManagement>
+            <repository>
+                <id>github</id>
+                <name>GitHub 0i99 Apache Maven Packages</name>
+                <url>https://maven.pkg.github.com/O0i99/battleships</url>
+            </repository>
+    </distributionManagement>
 
 </project>
