--- a/.github/workflows/javaspringship-test.yml
+++ b/.github/workflows/javaspringship-test.yml
@@ -14,6 +14,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: maven-settings
+      uses: s4u/maven-settings-action@v2
+      with:
+        servers: '[{"id": "github", "username": "dummy", "password": "${WORKFLOW_PAT}"}]'
+        githubServer: false
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
