--- a/javaSpringShip/pom.xml
+++ b/javaSpringShip/pom.xml
@@ -215,7 +215,7 @@
             </snapshots>
         </repository>
         <repository>
-            <id>github_0i99</id>
+            <id>github</id>
             <url>https://maven.pkg.github.com/0i99/battleships</url>
         </repository>
     </repositories>
