--- a/.github/workflows/javaspringship-test.yml
+++ b/.github/workflows/javaspringship-test.yml
@@ -17,7 +17,7 @@ jobs:
     - name: maven-settings
       uses: s4u/maven-settings-action@v2
       with:
-        servers: '[{"id": "github", "username": "dummy", "password": "${WORKFLOW_PAT}"}]'
+        servers: '[{"id": "github", "username": "pat", "password": "${GITHUB_TOKEN_REF}" }]'
         githubServer: false
     - name: Set up JDK 11
       uses: actions/setup-java@v2
@@ -27,3 +27,6 @@ jobs:
         cache: maven
     - name: Test with Maven
       run: mvn -f javaSpringShip/pom.xml clean compile test
+      env:
+        GITHUB_TOKEN_REF: ${{ secrets.WORKFLOW_PAT }}
+
