--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,12 +20,16 @@ jobs:
       - checkout
       # Use mvn clean and package as the standard maven build phase
       - run:
+          name: "tests vars"
+          command: |
+            echo $test_var and $TEST_VAR
+      - run:
           name: Build javaSpringShip
-          command: mvn -s .circleci/.circleci.settings.xml -f javaSpringShip/pom.xml -B -DskipTests clean package
+          command: mvn -s .circleci/settings.xml -f javaSpringShip/pom.xml -B -DskipTests clean package
       # Then run your tests!
       - run:
           name: Test javaSpringShip
-          command: mvn -s .circleci/.circleci.settings.xml -f javaSpringShip/pom.xml test
+          command: mvn -s .circleci/settings.xml -f javaSpringShip/pom.xml test
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
