--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,16 +21,16 @@ jobs:
       # Use mvn clean and package as the standard maven build phase
       - run:
           name: Build javaSpringShip
-          command: mvn -f javaSpringShip/pom.xml -B -DskipTests clean package
+          command: mvn -s .circleci/settings.xml -f javaSpringShip/pom.xml -B -DskipTests clean package
       # Then run your tests!
       - run:
           name: Test javaSpringShip
-          command: mvn -f javaSpringShip/pom.xml test
+          command: mvn -s .circleci/settings.xml -f javaSpringShip/pom.xml test
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+  test-all: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - build-and-test-javaSpringShip
