--- a/javaSpringShip/pom.xml
+++ b/javaSpringShip/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>pl.battleships</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.5-SNAPSHOT</version>
+            <version>0.0.8-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.yaml</groupId>
@@ -128,6 +128,11 @@
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
             <version>1.30</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
         </dependency>
 
     </dependencies>
