--- a/javaQuarkusShip/src/main/resources/application.properties
+++ b/javaQuarkusShip/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 quarkus.package.type=uber-jar
 
 # http -----------------------------------------------------------------------------------------------------------------
-quarkus.http.port=8050
+quarkus.http.port=8051
 quarkus.http.cors=true
-quarkus.http.test-port=6050
+quarkus.http.test-port=6051
 
 # logging --------------------------------------------------------------------------------------------------------------
 quarkus.log.level=INFO
@@ -14,5 +14,5 @@ game.team=none
 game.sleep=100
 
 # rest client ----------------------------------------------------------------------------------------------------------
-quarkus.rest-client.game-api.url=http://localhost:8051
-quarkus.rest-client.game-api.scope=javax.inject.Singleton
+quarkus.rest-client.game.url=http://127.0.0.1:8050
+quarkus.rest-client.game.scope=javax.inject.Singleton
