--- a/javaQuarkusShip/Dockerfile.native
+++ b/javaQuarkusShip/Dockerfile.native
@@ -1,5 +1,4 @@
-## Stage 1 : build with maven builder image with native capabilities
-FROM quay.io/quarkus/ubi-quarkus-native-image:22.1-java11 AS build
+FROM quay.io/quarkus/ubi-quarkus-native-image:22.1-java11 AS build-stage
 COPY --chown=quarkus:quarkus mvnw /code/mvnw
 COPY --chown=quarkus:quarkus .mvn /code/.mvn
 COPY --chown=quarkus:quarkus pom.xml /code/
@@ -10,11 +9,15 @@ RUN ./mvnw -s /code/settings.xml -B org.apache.maven.plugins:maven-dependency-pl
 COPY src /code/src
 RUN ./mvnw -s /code/settings.xml package -Pnative -Dquarkus.native.additional-build-args=--initialize-at-run-time=pl.battleships.core.api.BattleshipGameImpl
 
-## Stage 2 : create the docker final image
+
+
+# -----------------------------
+
+
 
 FROM quay.io/quarkus/quarkus-micro-image:1.0
 WORKDIR /work/
-COPY --from=build /code/target/*-runner /work/application
+COPY --from=build-stage /code/target/*-runner /work/application
 
 # set up permissions for user `1001`
 RUN chmod 775 /work /work/application \
