--- a/javaSpringShip/pom.xml
+++ b/javaSpringShip/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>pl.battleships</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.10-SNAPSHOT</version>
+            <version>0.0.11-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.yaml</groupId>
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <version>1.18.24</version>
         </dependency>
         <dependency>
             <groupId>com.github.ulisesbocchio</groupId>
