--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 .idea/
+target/
+build/
+logs/
 
 # Compiled class file
 *.class
@@ -14,6 +17,8 @@
 *.zip
 *.tar.gz
 *.rar
+
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
