--- a/.github/workflows/javaquarkusship-dockerhub-publish.yml
+++ b/.github/workflows/javaquarkusship-dockerhub-publish.yml
@@ -1,13 +1,4 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# GitHub recommends pinning actions to a commit SHA.
-# To get a newer version, you will need to update the SHA.
-# You can also reference a tag or branch, but the action may change without warning.
-
-name: Publish Docker image
+name: publish docker image for java quarkus ship project
 
 on:
   release:
@@ -31,13 +22,13 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: 0i99/pl.battleships
+          images: 0i99/pl.battleships/javaquarkusship
       
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: javaSpringShip
-          file: javaSpringShip/Dockerfile
+          context: javaQuarkusShip
+          file: javaQuarkusShip/Dockerfile.native
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
