kotlin + spring; coordinator refactor so can handle list of applications

--- a/coordinator/vueCoordinator/.env
+++ b/coordinator/vueCoordinator/.env
@@ -1,6 +1,5 @@
-VUE_APP_SIZE=30
-VUE_APP_BLUE_TEAM_URL=http://127.0.0.1:8050
-VUE_APP_RED_TEAM_URL=http://127.0.0.1:8051
-
+VUE_APP_SIZE=15
+VUE_APP_PLAYERS_URL=http://127.0.0.1:8051,http://127.0.0.1:8052,http://127.0.0.1:8053,http://127.0.0.1:8054
+VUE_APP_SLEEP=300
 
 
