--- a/kotlinSpringShip/pom.xml
+++ b/kotlinSpringShip/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>kotlin-stdlib-jdk8</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-serialization-json</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
@@ -109,13 +114,7 @@
         <dependency>
             <groupId>pl.battleships</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.11-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.yaml</groupId>
-                    <artifactId>snakeyaml</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>0.0.16-SNAPSHOT</version>
         </dependency>
         <!-- open api v3 -->
         <dependency>
@@ -147,6 +146,21 @@
             <version>1.5.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging-jvm</artifactId>
+            <version>2.1.23</version>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
@@ -240,6 +254,7 @@
                             <generateApis>true</generateApis>
                             <configOptions>
                                 <interfaceOnly>true</interfaceOnly>
+                                <enumPropertyNaming>UPPERCASE</enumPropertyNaming>
                             </configOptions>
                         </configuration>
                     </execution>
@@ -264,6 +279,9 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
         </repository>
     </repositories>
     <pluginRepositories>
