--- a/docker-compose-with-build.yml
+++ b/docker-compose-with-build.yml
@@ -49,12 +49,14 @@ services:
       GAME_SLEEP: 200
 
   player4:
-    image: pl.battleships/java-spring-ship
-    build: javaSpringShip/
+    image: pl.battleships/kotlin-quarkus-ship
+    build: 
+      context: kotlinQuarkusShip
+      dockerfile: Dockerfile.native
     container_name: battleships-player4
     ports:
       - 8054:8050
     environment:
-      SERVER_PORT: 8050
-      GAME_OPPONENTURL: http://player3:8050
+      QUARKUS_HTTP_PORT: 8050
+      QUARKUS_REST_CLIENT_GAME_URL: http://player3:8050
       GAME_SLEEP: 200
