--- a/kotlinQuarkusShip/src/main/resources/application.yml
+++ b/kotlinQuarkusShip/src/main/resources/application.yml
@@ -1,13 +1,18 @@
 quarkus:
   package.type: uber-jar
-
-  # http -----------------------------------------------------------------------------------------------------------------
+  log:
+    level: INFO
+    category."pl.battleships".level: DEBUG
   http:
     port: 8051
     cors: true
     test-port: 6051
 
+  rest-client:
+    game:
+      url: http://127.0.0.1:8052
 game:
   timeout: 1000
   sleep: 100
-  opponent-url: localhost:8050
+  opponent-url: localhost:8052
+
