--- a/.github/workflows/kotlinquarkusship-test.yml
+++ b/.github/workflows/kotlinquarkusship-test.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: unit tests for java quarkus ship project
+name: unit tests for kotlin quarkus ship project
 
 on:
   push:
